# Lab1_3Sem

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: release.yaml
